[package]
name = "physics_puzzle_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true

#"armv7-linux-androideabi"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31